--- a/front_end/Style.css
+++ b/front_end/Style.css
@@ -1,6 +1,13 @@
-body{
-    background-color: rgb(153, 143, 127);
-}
+body {
+    background-image: url("download (2).jpg");
+    background-repeat:no-repeat;
+    background-size: cover;
+    opacity: 70%;
+  }
+  .footer{
+    background-color: black;
+    text-align: center;
+  }
 h1{
 color: rgb(134, 105, 105);    
 font-family: fantasy;
@@ -21,7 +28,7 @@ color: rgb(177, 230, 125);
 }
 .london{
     color: rgb(10, 24, 10);
-    background-color: rgb(182, 157, 58);
+    background-color: rgb(207, 175, 44);
     font-size: larger;
 }
 .mine{
@@ -46,3 +53,13 @@ border: 15px solid black;
 max-width: 100%;
 height: auto;
 }
+
+
+.week{
+ color: rgb(107, 168, 107);   
+ background-color: rgb(32, 18, 18);
+ font-family: Arial, Helvetica, sans-serif;
+ font-size: small;
+ list-style-type: georgian;
+}
+
